[package]
name = "arch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.30"
libp2p = {version="0.53.2", features = ["noise","tcp", "yamux", "websocket", "async-std", "dns", "mdns", "ping", "macros"]}
libp2p-gossipsub = "0.46.1"
async-std = { version = "1.6.2", features = ["attributes"] }
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.11"
